Update maplibre to 0.15.0